Fri May 21 10:38:10 UTC 2010  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Crossplatform/test_list.txt:

          Changing Crossplatform nightly build to be on cicada2.

Wed May 19 16:26:44 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * MPC/config/dcps_ts_defaults.mpb:
        * MPC/config/java.mpb:
        * java/dds/dcps_java_optional.mpb:

          Changed "command" to just the executable (perl) and put the
          arguments in "commandflags".  This is for compatibility with the
          latest gnuace changes in the DOC group repository.

        * java/INSTALL:

          Added vc9 projects to documentation.

        * tools/odds_dissector/README:

          Added notes on the difference between the wireshark install dir
          and WIRESHARK_ROOT.

Wed May 12 21:02:47 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/PacketRemoveVisitor.cpp:
        * dds/DCPS/transport/framework/QueueRemoveVisitor.cpp:

          Fixed bugs in QueueRemoveVisitor::visit_element_remove and
          PacketRemoveVisitor::visit_element_ref that access samples
          after it's released.

Wed May 12 03:50:38 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/lj-plots.gpi:
        * performance-tests/Bench/bin/plot-density.gpi:
        * performance-tests/Bench/bin/plot-jitter.gpi:
        * performance-tests/Bench/bin/plot-quantiles.gpi:
        * performance-tests/Bench/bin/plot-throughput-testformats.gpi:
        * performance-tests/Bench/bin/plot-throughput-transports.gpi:
        * performance-tests/Bench/bin/plot-transports-scaling.gpi:
        * performance-tests/Bench/bin/plot-transports.gpi:
        * performance-tests/Bench/tools/plot-latency.gpi:
        * performance-tests/Bench/tools/plot-scaling.gpi:
        * performance-tests/Bench/tools/plot-throughput.gpi:

          Moved files to accepted GNUPlot file extension name.
